--- a/Portfolio/package.json
+++ b/Portfolio/package.json
@@ -10,10 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "bootstrap": "^5.3.0",
+    "@emailjs/browser": "^3.11.0",
+    "bootstrap": "^5.3.1",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^10.13.1",
     "lottie-react": "^2.4.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "swiper": "^10.0.4"
